--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -1,6 +1,6 @@
 repos:
 - repo: git://github.com/dnephin/pre-commit-golang
-  rev: master
+  rev: v0.4.0
   hooks:
     - id: go-fmt
     - id: go-vet
